# Simple-Screenshot-Tool

./: Cargo.toml
src/: capture.rs  draw.rs  main.rs
