[package]
name = "SimpleScreenshotTool"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.29"       # Transparent overlay and input
screenshots = "0.8.10"     # Capturing screen data
image = "0.25.6"                    # Saving grabbed image
arboard = "3.5.0"                    # Clipboard
chrono = "0.4.41"                    # Timestamps
dirs = "6.0.0"             # Find pictures directory